kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wvi-api
spec:
  selector:
    app: wvi-api
  ports:
    - port: 8091
      targetPort: 8091
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: wvi-api-external
spec:
  selector:
    app: wvi-api
  ports:
    - port: 8091
      targetPort: 8091
  type: LoadBalancer
